--- a/.github/workflows/changelogs.yml
+++ b/.github/workflows/changelogs.yml
@@ -62,9 +62,10 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
+          git checkout main  # Ensure we're on the 'main' branch (or the branch you use)
           git add changelog.md
           git commit -m "Add changelog for ${{ github.ref_name }}"
-          git push
+          git push origin main  # Push to 'main' (or the correct branch)
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
