--- a/.github/workflows/changelogs.yml
+++ b/.github/workflows/changelogs.yml
@@ -62,10 +62,9 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git checkout main  # Ensure we're on the 'main' branch (or the branch you use)
           git add changelog.md
           git commit -m "Add changelog for ${{ github.ref_name }}"
-          git push origin main  # Push to 'main' (or the correct branch)
+          git push origin HEAD:main
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
