git: fixed output path not matching when creating releases

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,11 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: android-build
-          path: build/app/outputs/flutter-apk/*.apk
+          path: |
+            build/app/outputs/flutter-apk/app-armeabi-v7a-release-split.apk
+            build/app/outputs/flutter-apk/app-arm64-v8a-release-split.apk
+            build/app/outputs/flutter-apk/app-x86_64-release-split.apk
+            build/app/outputs/flutter-apk/app-release-universal.apk
 
   build-ios:
     runs-on: macos-latest
@@ -65,16 +69,16 @@ jobs:
       - name: Build iOS (macOS only)
         run: flutter build ios --release --no-codesign
 
-      - name: Compress iOS App Directory
+      - name: Create ZIP of iOS Build
         run: |
           cd build/ios/iphoneos
-          zip -r AnymeX-iOS.zip *.app
-    
-      - name: Upload iOS Artifacts
+          zip -r ../../../ios-release-build.zip *.app
+
+      - name: Upload iOS Artifact
         uses: actions/upload-artifact@v3
         with:
           name: ios-build
-          path: build/ios/iphoneos/AnymeX-iOS.zip
+          path: ios-release-build.zip
 
   build-linux:
     runs-on: ubuntu-latest
@@ -101,11 +105,16 @@ jobs:
       - name: Build Linux
         run: flutter build linux --release
 
+      - name: Zip Linux Artifacts
+        run: |
+          cd build/linux/x64/release/bundle
+          zip -r AnymeX_linux.zip .
+
       - name: Upload Linux Artifact
         uses: actions/upload-artifact@v3
         with:
           name: linux-build
-          path: build/linux/x64/release/bundle/*
+          path: build/linux/x64/AnymeX_linux.zip
 
   build-windows:
     runs-on: windows-latest
@@ -132,95 +141,104 @@ jobs:
           cd build/windows/x64/runner/Release
           Compress-Archive -Path * -DestinationPath AnymeX_Windows.zip
 
-      - name: Upload Windows Artifact
+      - name: Upload Windows Build Artifact
         uses: actions/upload-artifact@v3
         with:
           name: windows-build
           path: build/windows/x64/runner/Release/AnymeX_Windows.zip
 
       - name: Setup Inno Setup
-        run: |
-          choco install innosetup
+        run: choco install innosetup -y
 
       - name: Build Installer with Inno Setup
         run: |
           & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" inno.iss
 
+      - name: Upload Inno Setup Installer Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: windows-installer
+          path: output/AnymeX-Setup.exe
+
   release:
     needs: [build-android, build-ios, build-linux, build-windows]
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+    - name: Checkout Code
+      uses: actions/checkout@v3
 
-      - name: Create GitHub Release
-        id: create_release
-        uses: softprops/action-gh-release@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          tag_name: ${{ github.ref }}
-          name: Release ${{ github.ref }}
-          body: "Release for version ${{ github.ref }}"
-          draft: false
-          prerelease: false
+    - name: Create GitHub Release
+      id: create_release
+      uses: softprops/action-gh-release@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        tag_name: ${{ github.ref }}
+        name: Release ${{ github.ref }}
+        body: "Release for version ${{ github.ref }}"
+        draft: false
+        prerelease: false
 
-      - name: Upload Android APKs to GitHub Release
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/app/outputs/flutter-apk/app-armeabi-v7a-release-split.apk
-          asset_name: AnymeX-armeabi-v7a.apk
-          asset_content_type: application/vnd.android.package-archive
+    - name: Upload Universal APK to GitHub Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: build/app/outputs/flutter-apk/app-release-universal.apk
+        asset_name: AnymeX-Android-universal.apk
+        asset_content_type: application/octet-stream
 
-      - uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/app/outputs/flutter-apk/app-arm64-v8a-release-split.apk
-          asset_name: AnymeX-arm64-v8a.apk
-          asset_content_type: application/vnd.android.package-archive
+    - name: Upload arm64-v8a APK to GitHub Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: build/app/outputs/flutter-apk/app-arm64-v8a-release-split.apk
+        asset_name: AnymeX-Android-arm64.apk
+        asset_content_type: application/octet-stream
 
-      - uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/app/outputs/flutter-apk/app-x86_64-release-split.apk
-          asset_name: AnymeX-x86_64.apk
-          asset_content_type: application/vnd.android.package-archive
+    - name: Upload armeabi-v7a APK to GitHub Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: build/app/outputs/flutter-apk/app-armeabi-v7a-release-split.apk
+        asset_name: AnymeX-Android-armeabi-v7a.apk
+        asset_content_type: application/octet-stream
 
-      - uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/app/outputs/flutter-apk/app-release-universal.apk
-          asset_name: AnymeX-universal.apk
-          asset_content_type: application/vnd.android.package-archive
+    - name: Upload x86_64 APK to GitHub Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: build/app/outputs/flutter-apk/app-x86_64-release-split.apk
+        asset_name: AnymeX-Android-x86_64.apk
+        asset_content_type: application/octet-stream
 
-      - name: Upload iOS Artifacts to GitHub Release
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/ios/iphoneos/AnymeX-iOS.zip
-          asset_name: AnymeX-iOS.zip
-          asset_content_type: application/zip
 
-      - name: Upload Windows ZIP to GitHub Release
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/windows/x64/runner/Release/AnymeX_Windows.zip
-          asset_name: AnymeX-Windows.zip
-          asset_content_type: application/zip
+    - name: Upload iOS ZIP to GitHub Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ios-release-build.zip 
+        asset_name: AnymeX-iOS.zip
+        asset_content_type: application/zip
 
-      - name: Upload Windows Installer to GitHub Release
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: output/AnymeX-Setup.exe
-          asset_name: AnymeX-Setup.exe
-          asset_content_type: application/x-msdownload
+    - name: Upload Windows ZIP to GitHub Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: build/windows/x64/runner/Release/AnymeX_Windows.zip
+        asset_name: AnymeX-Windows.zip
+        asset_content_type: application/zip
 
-      - name: Upload Linux Artifact to GitHub Release
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/linux/x64/release/bundle/*
-          asset_name: AnymeX-linux.zip
-          asset_content_type: application/zip
+    - name: Upload Windows Installer to GitHub Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: output/AnymeX-Setup.exe
+        asset_name: AnymeX-Setup.exe
+        asset_content_type: application/x-msdownload
+
+    - name: Upload Linux ZIP to GitHub Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: build/linux/x64/release/bundle/AnymeX_linux.zip
+        asset_name: AnymeX-Linux.zip
+        asset_content_type: application/zip
